# 3d-portfolio

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  PROJECT_PROGRESS.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.api.config.js  playwright.api.db.config.js  playwright.config.js  vite.config.js
.claude/commands/: mr-check.md  mr-commit-push.md  mr-deploy.md  mr-fix-save.md  mr-full.md  mr-progress.md  mr-rollback.md
.claude/hooks/: after-edit-note.sh
.github/workflows/: cpp-app.yml
cpp-app/: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cpp-app/app/platform/: AppPaths.cpp  AppPaths.hpp
cpp-app/app/ui/qt/: AppController.cpp  AppController.hpp  AuthService.hpp  AuthSessionService.cpp  AuthSessionService.hpp  Main.qml  MockAuthService.cpp  MockAuthService.hpp  main_qt.cpp
cpp-app/sdk/core/: ApiClient.hpp  ApiClientConfig.hpp  ApiResult.hpp  AssetClient.hpp  AuthClient.hpp  AuthSession.hpp  CommunityClient.hpp  EnvelopeParser.hpp  InteractionTypes.hpp  JsonValue.hpp  MemoryTokenStore.hpp  NlohmannEnvelopeParser.hpp  NlohmannJsonValue.hpp  ProjectClient.hpp  TokenStore.hpp
cpp-app/sdk/models/: ApiError.hpp  Asset.hpp  Comment.hpp  CommunityPost.hpp  DownloadRequest.hpp  Pagination.hpp  Profile.hpp  Project.hpp  ResponseEnvelope.hpp  User.hpp
cpp-app/sdk/network/: CurlHttpClient.cpp  CurlHttpClient.hpp  HttpClient.hpp  RealHttpClient.hpp
cpp-app/sdk/platform/: LinuxSecretServiceTokenStore.cpp  LinuxSecretServiceTokenStore.hpp  MacOSKeychainTokenStore.cpp  MacOSKeychainTokenStore.hpp  SecureTokenStore.cpp  SecureTokenStore.hpp  WindowsCredentialTokenStore.cpp  WindowsCredentialTokenStore.hpp
cpp-app/src/: main.cpp
cpp-app/tests/integration/: local_api_smoke.cpp
cpp-app/tests/unit/: auth_session_tests.cpp  curl_http_compile_tests.cpp  nlohmann_json_parser_tests.cpp  qt_appcontroller_tests.cpp  qt_authsession_service_tests.cpp  sdk_contract_tests.cpp  secure_tokenstore_tests.cpp  tokenstore_tests.cpp
docs/: API_CONTRACT.md  API_ERRORS.md  API_V1_FREEZE_PLAN.md  API_V1_GAPS.md  API_V1_MODEL_MAPPING.md  ARCHITECTURE.md  CPP_APP_MIGRATION_PLAN.md
docs/adr/: ADR_CPP_DEPENDENCY_MANAGER_STRATEGY.md  ADR_CPP_HTTP_BACKEND_STRATEGY.md  ADR_CPP_JSON_STRATEGY.md  ADR_CPP_TOKENSTORE_STRATEGY.md
docs/openapi/: api-v1.yaml
public/assets/environments/: studio-tomoco.exr
scripts/: convert-fbx-to-glb.py  convert-model-to-glb.py  deploy-vps.mjs  migrate-files-to-postgres.mjs  package-vps-release.mjs  render-glb-thumbnail.py  run-api-db-tests.mjs  validate-openapi.mjs  verify-visitor-studio.mjs
server/: contactMessagesStore.js  content.js  downloadRequestsStore.js  emailDelivery.js  index.js  interactionsStore.js  modelConverter.js  postgresStores.js  responses.js
server/contracts/: responseValidator.js
src/: Admin.jsx  App.jsx  index.css  main.jsx
src/components/: AccountMenu.jsx  Astronaut.jsx  Card.jsx  CommentSection.jsx  FlipWords.jsx  HeroText.jsx  Loader.jsx  ModelPreview.jsx  ParallaxBackground.jsx  ProjectDetail.jsx
src/lib/: api.js  assetCategories.js  i18n.js
src/pages/: AccountPage.jsx  AuthPage.jsx  CommunityPage.jsx  PublicProfilePage.jsx
src/sections/: About.jsx  Community.jsx  Contact.jsx  Experience.jsx  Footer.jsx  Hero.jsx  Navbar.jsx  Projects.jsx
src/three/hooks/: useParallaxEffect.jsx  useScrollProgress.jsx
src/three/objects/: Astronaut.jsx
src/three/scenes/: ParallaxBackground.jsx
src/three/systems/: ScrollEngine.jsx
tests/api/: contract.db.spec.js  contract.spec.js
tests/e2e/: admin-visitors.spec.js  production-smoke.spec.js
